tests/incremental_eval_diff/incremental_eval_diff.exp
No errors!
Error -------------------------------------------------------------------------------------------------------- a.js:8:17

null or undefined [1] is not an object. [not-an-object]

   a.js:8:17
   8| export type A = $Values<T>;
                      ^^^^^^^^^^

References:
   a.js:8:25
   8| export type A = $Values<T>;
                              ^ [1]


Error --------------------------------------------------------------------------------------------------------- b.js:6:2

Cannot cast `a` to object type because number [1] is incompatible with object type [2]. [incompatible-cast]

   b.js:6:2
   6| (a: {
       ^

References:
   b.js:5:16
   5| declare var a: A;
                     ^ [1]
   b.js:6:5
          v
   6| (a: {
   7|     m: number,
   8|     n: number,
   9| });
      ^ [2]



Found 2 errors
